# muzeeka

muzeeka/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
muzeeka/src-tauri/bass/: README.md
muzeeka/src-tauri/capabilities/: default.json
muzeeka/src-tauri/icons/: icon.icns
muzeeka/src-tauri/src/: commands.rs  cover_url_cache.rs  cue.rs  discord_rpc.rs  drop_handler.rs  equalizer.rs  file_drag.rs  imgbb.rs  lib.rs  library.rs  lrc.rs  lrclib.rs  lyrics.rs  main.rs  metadata.rs  musicbrainz.rs  player.rs  playlists.rs  process_util.rs  remote_control.rs  remote_server.rs  settings.rs  spotdl.rs  taskbar_handler.rs  unison.rs  vk_audio.rs  ytdlp.rs
muzeeka/src-tauri/src/bass/: ffi.rs  mod.rs  types.rs
muzeeka/src-tauri/src/remote/: index.html
muzeeka/src-tauri/target-check-temp/: .rustc_info.json
muzeeka/src-tauri/target-check-temp/debug/.fingerprint/adler2-4d1a9ab780c8901d/: lib-adler2  lib-adler2.json
muzeeka/src-tauri/target-check-temp/debug/.fingerprint/adler2-708dea00d6a216f0/: lib-adler2  lib-adler2.json
muzeeka/src-tauri/target-check-temp/debug/.fingerprint/aho-corasick-103da18278eabe42/: lib-aho_corasick  lib-aho_corasick.json
muzeeka/src-tauri/target-check-temp/debug/.fingerprint/aho-corasick-c14f1ccd491ef1cf/: lib-aho_corasick  lib-aho_corasick.json
muzeeka/src-tauri/target-check-temp/debug/.fingerprint/alloc-no-stdlib-5b70bb3317bfa780/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
muzeeka/src-tauri/target-check-temp/debug/.fingerprint/alloc-no-stdlib-a70791b9751e1f31/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
(+1159 files in other folders)
