[package]
name = "muzeeka"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "muzeeka"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "muzeeka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
parking_lot = "0.12"
walkdir = "2"
lofty = "0.24"
id3 = "1"
rayon = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
cue-rw = "0.2"
num-rational = "0.4"
drag = "2"
discord-rich-presence = "1.1"
ureq = { version = "3", features = ["json"] }
urlencoding = "2"
base64 = "0.22"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }


